--- a/package.json
+++ b/package.json
@@ -7,9 +7,19 @@
     "fs": "^0.0.1-security",
     "html-pdf": "^3.0.1",
     "mysql": "^2.18.1",
+    "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "puppeteer": "^21.0.3",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
-  }
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "name": "electricitybillgenerator",
+  "description": "",
+  "version": "1.0.0",
+  "main": "insertData.js",
+  "author": "",
+  "license": "ISC"
 }
